# rust-web-demo

./: Cargo.toml  README.md  config.yaml  log4rs.yaml
src/: main.rs
src/conf/: defs.rs  mod.rs
src/dao/: mod.rs  rbac.rs  user.rs
src/handler/: asset.rs  mod.rs  user.rs
src/handler/middleware/: access.rs  access_log.rs  auth.rs  mod.rs
src/inputs/: user.rs
src/model/: mod.rs  rbac.rs  user.rs
src/service/: rbac.rs
src/utility/: context.rs  db.rs  err.rs  helper.rs  log.rs  macros.rs  mod.rs  result.rs
views/: login.html
