[package]
name = "rust-shop-web"
version = "0.1.0"
authors = ["wangyan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["full"]}
sqlx = {version = "0.3.3", default-features = false, features = ["runtime-tokio", "mysql"]}
serde = { version = "1.0.105", features=["derive"] }
validator = "0.10.0"
validator_derive = "0.10.0"
serde_json = "1.0.50"
serde_yaml = "0.8.11"
actix-web = "2.0"
actix-rt = "1.1.0"
once_cell = "1.3.1"
lazy_static = "1.4.0"
mobc-redis = "0.5"
mobc = "0.5"
log = "0.4.8"
log4rs = "0.11.0"